--- a/src/styles.css
+++ b/src/styles.css
@@ -7,8 +7,17 @@
   padding: 0;
 }
 
+html {
+  background-color: #01021d;
+}
+
 body {
   overflow-x: hidden;
+}
+
+html,
+body {
+  overscroll-behavior-y: none;
 }
 
 .section {
