--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -65,5 +65,36 @@ li::marker {
   gap: 15px;
 }
 
-@media (max-width: 1035px) {
+@media (max-width: 940px) {
+  .tech-stack {
+    max-width: 350px;
+  }
+}
+
+@media (max-width: 730px) {
+  .section-headings {
+    font-size: 4rem;
+    margin-bottom: 40px;
+  }
+
+  .about-me {
+    font-size: 1.4rem;
+    margin: 0 75px;
+    line-height: 1.6;
+  }
+
+  .tech-stack {
+    font-size: 2.4rem;
+  }
+
+  .icon {
+    width: 40px;
+    height: 40px;
+  }
+}
+
+@media (max-width: 630px) {
+  .tech-stack {
+    max-width: 300px;
+  }
 }
