--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -80,13 +80,13 @@
 }
 
 .img-layer {
-  position: absolute;
+  position: fixed;
   width: 95vw;
   height: 95vh;
   top: 20px;
   left: 300px;
   background-position: right;
-  background-size: cover;
+  /* background-size: cover; */
 }
 
 .img-layer:nth-child(1) {
@@ -144,5 +144,93 @@
 
   .description {
     font-size: 1.6rem;
+  }
+}
+
+@media (max-width: 940px) {
+  .img-layer:nth-child(8) {
+    /* display: none; */
+  }
+  .img-layer {
+    left: 150px;
+    width: 100vw;
+    height: 100vh;
+  }
+}
+
+@media (max-width: 787px) {
+  .img-layer:nth-child(8) {
+    display: none;
+  }
+
+  .heading-primary {
+    font-size: 5rem;
+  }
+
+  .heading-secondary {
+    font-size: 3.5rem;
+  }
+
+  .subheading {
+    font-size: 1.2rem;
+  }
+
+  .description-main {
+    font-size: 1.4rem;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.596);
+  }
+
+  .img-layer {
+    left: 0px;
+  }
+
+  .container {
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.747);
+    justify-content: flex-start;
+    padding-left: 35px;
+  }
+}
+
+@media (max-width: 730px) {
+  .container {
+    padding-right: 150px;
+    padding-left: 15px;
+  }
+}
+
+@media (max-width: 600px) {
+  .headings-container {
+    max-width: 450px;
+  }
+}
+
+@media (max-width: 510px) {
+  .container {
+    padding-left: 0px;
+  }
+}
+
+@media (max-width: 496px) {
+  .heading-primary {
+    font-size: 3.5rem;
+  }
+
+  .heading-secondary {
+    font-size: 2.4rem;
+  }
+
+  .subheading {
+    font-size: 1.2rem;
+  }
+
+  .description-main {
+    font-size: 1.3rem;
+    text-shadow: 0px 0px 1px rgb(0, 0, 0);
+  }
+}
+
+@media (max-width: 400px) {
+  .headings-container {
+    max-width: 300px;
   }
 }
