--- a/src/Components/Work/Project.css
+++ b/src/Components/Work/Project.css
@@ -1,5 +1,7 @@
 .work-img {
-  width: 51.2rem;
+  position: relative;
+  width: 100%;
+  height: 100%;
   border-radius: 25px;
   transition: all 0.3s ease;
 }
@@ -22,7 +24,8 @@
 
 .desc-container {
   padding: 15px 35px;
-  position: absolute;
+  position: relative;
+  /* position: absolute; */
   max-width: 58.5rem;
   border-radius: 25px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.555);
@@ -59,10 +62,6 @@
   color: #00ff91;
 }
 
-.container-img {
-  grid-column: 1/8;
-}
-
 .project-link {
   position: relative;
   background-color: #01021d;
@@ -84,6 +83,10 @@
   box-shadow: 0 20px 30px rgba(0, 0, 0, 0.685);
 }
 
+.container-img {
+  grid-column: 1/8;
+}
+
 .info-container {
   grid-column: 7/-1;
 }
@@ -97,6 +100,10 @@
 }
 
 .left {
+  grid-area: 1/1/-1/8;
+}
+
+.left-image {
   grid-area: 1/1/-1/7;
 }
 
@@ -140,35 +147,67 @@
 }
 
 @media (max-width: 1035px) {
-  /* .work-img {
-    width: 40rem;
-    border-radius: 20px;
+  .desc-container {
+    padding: 10px 20px;
+  }
+}
+
+@media (max-width: 910px) {
+  .tech-stack-list {
+    bottom: 0;
+  }
+}
+
+@media (max-width: 800px) {
+  .project-description {
+    font-size: 1.2rem;
+  }
+
+  .work-container .subheading {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 650px) {
+  .project-description {
+    font-size: 1rem;
   }
 
   .desc-container {
-    max-width: 45rem;
+    padding: 7px 15px;
   }
 
-  .project-description {
-    font-size: 1.4rem;
+  .tech-stack-list {
+    font-size: 1.8rem;
   }
+
+  .project-src-link:link,
+  .project-src-link:visited {
+    font-size: 1.2rem;
+    padding: 0.6rem 1.2rem;
+  }
+}
+
+@media (max-width: 630px) {
   .project-container {
-    grid-template-columns: repeat(8, 1fr);
+    grid-template-columns: 1fr;
+    align-items: flex-end;
+    padding-bottom: 20px;
   }
 
-  .container-img {
-    grid-column: 1/5;
+  .work-container .subheading {
+    color: #00ff91;
+    font-size: 0.9rem;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.452);
+    padding-right: 5px;
   }
 
-  .info-container {
-    grid-column: 4/-1;
+  .work-container .heading-secondary {
+    text-shadow: 1px 1px 1px rgb(0, 0, 0);
+    padding-right: 5px;
   }
 
-  .right {
-    grid-area: 1/5/-1/-1;
+  .tech-stack-list {
+    padding-right: 5px;
   }
-
-  .left {
-    grid-area: 1/1/-1/5;
-  } */
 }
