--- a/src/Components/Work/Work.css
+++ b/src/Components/Work/Work.css
@@ -3,5 +3,20 @@
   max-width: 1000px;
 }
 
-@media (max-width: 1035px) {
+#section-work {
+  padding-right: 10rem;
+  padding-left: 10rem;
+}
+
+@media (max-width: 885px) {
+  #section-work {
+    padding-right: 7rem;
+    padding-left: 7rem;
+  }
+}
+
+@media (max-width: 630px) {
+  #section-work {
+    margin-top: 50px;
+  }
 }
