--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -28,6 +28,7 @@
   gap: 5rem;
   list-style: none;
   margin-left: auto;
+  transition: all 0.3s ease;
 }
 
 .nav--list-link:link,
@@ -92,19 +93,17 @@ ion-icon {
     top: 0;
     right: 0;
     height: 100vh;
-    background-color: #01021d21;
-    backdrop-filter: blur(20px);
+    background: rgba(1, 2, 29, 0.884);
     padding: 3rem;
     padding-top: 5rem;
     transform: translateX(105%);
     transition: all 0.3s ease-in;
     font-weight: 500;
-    overflow-y: hidden;
   }
 
   .nav--list-item:last-child {
     margin-top: auto;
-    margin-bottom: 5rem;
+    margin-bottom: 10rem;
   }
 
   .show-nav {
@@ -121,5 +120,10 @@ ion-icon {
 
   .close-nav-btn {
     display: block;
+  }
+
+  .nav--list-link:link,
+  .nav--list-link:visited {
+    font-size: 2.2rem;
   }
 }
